btrfs: send: fix error code if an unknown inode type is found

There are two types for "not supported", but the correct one is
EOPNOTSUPP, let's use that one. The error message in the error case is
not very helpful, enhance it at least with the inode number.

The unknown type seems to be the block device (S_IFBLK)(as it's the only
unhandled case. Adding this type would need to extend the send protocol,
so this needs to stay as 'not supported'.

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=196903
Signed-off-by: David Sterba <dsterba@suse.com>